--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body {
   height: 1129px;
   padding-top: 128px;
   padding-bottom: 271px;
-  background: url(../img/buildings__black_3164.png) center bottom repeat-x, url(../img/buildings__white_3165.png) center bottom repeat-x, #1d1d1d;
+  background: url(../img/buildings__black_3164.png) center 101% repeat-x, url(../img/buildings__white_3165.png) center 101% repeat-x, #1d1d1d;
   /* background-size: contain, contain; */
 }
 
@@ -142,6 +142,7 @@ body {
   grid-template-rows: max-content max-content;
   grid-template-columns: max-content max-content;
   gap: 178px;
+  place-content: center center;
 }
 
 .about__item {
@@ -173,7 +174,79 @@ body {
   color: #b7b7b7;
 }
 
+.team {
+  height: 745px;
+}
 
+.block__head {
+  text-align: center;
+}
+
+.block__title {
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 34px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #1d1e1f;
+  margin: 0;
+  padding-top: 138px;
+  margin-bottom: 13px;
+}
+
+.block__text {
+  font-family: "Merriweather-LightItalic", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 300;
+  font-style: italic;
+  letter-spacing: 0.02em;
+  color: #898888;
+  margin: 0;
+}
+
+.team__inner {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 127px;
+}
+
+.team__item {
+  text-align: center;
+}
+
+.team__img {
+  margin-bottom: 29px;
+}
+
+.team__title {
+  font-family: "HelveticaNeueLTProMd", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #464646;
+  margin: 0;
+  margin-bottom: 7px;
+}
+
+.team__text {
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #b3b3b3;
+  margin: 0;
+  margin-bottom: 21px;
+}
+
+.team__icon-box a {
+  font-size: 20px;
+  color: #e4e4e4;
+  transition: .2s;
+}
+
+.team__icon-box a:hover {
+  color: #949494;
+} 
 
 /* 
 font-family: "HelveticaNeueLTProLt", sans-serif;
