--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,70 @@ body {
 
 .team__icon-box a:hover {
   color: #949494;
-} 
+}
+
+.provide {
+  background-color: #181818;
+  padding-bottom: 155px;
+}
+.block__head {
+}
+.inverse {
+
+}
+.inverse .block__title {
+  padding-top: 176px;  
+  color: #fff;
+}
+.inverse .block__text {
+  color: #777;
+}
+.provide__inner {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 138px;
+}
+.provide__item {
+  text-align: center;
+  max-width: 335px;
+}
+
+.provide__item i {
+  font-size: 63px;
+  color: #fff;
+  width: 172px;
+  height: 172px;
+  border: 5px solid #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 43px;
+}
+.icon-chart-line {
+}
+.provide__title {
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 26px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin: 0;
+  margin-bottom: 31px;
+}
+.provide__text {
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #383838;
+  margin: 0;
+}
+.icon-heart {
+}
+.icon-upload-cloud-outline {
+}
+
 
 /* 
 font-family: "HelveticaNeueLTProLt", sans-serif;
