--- a/css/style.css
+++ b/css/style.css
@@ -252,23 +252,22 @@ body {
   background-color: #181818;
   padding-bottom: 155px;
 }
-.block__head {
-}
-.inverse {
 
-}
 .inverse .block__title {
   padding-top: 176px;  
   color: #fff;
 }
+
 .inverse .block__text {
   color: #777;
 }
+
 .provide__inner {
   display: flex;
   justify-content: space-between;
   padding-top: 138px;
 }
+
 .provide__item {
   text-align: center;
   max-width: 335px;
@@ -286,8 +285,7 @@ body {
   align-items: center;
   margin: 0 auto 43px;
 }
-.icon-chart-line {
-}
+
 .provide__title {
   font-family: "HelveticaNeueLTProLt", sans-serif;
   font-size: 26px;
@@ -297,6 +295,7 @@ body {
   margin: 0;
   margin-bottom: 31px;
 }
+
 .provide__text {
   font-family: "HelveticaNeueLTProLt", sans-serif;
   font-size: 18px;
@@ -305,10 +304,121 @@ body {
   color: #383838;
   margin: 0;
 }
-.icon-heart {
+
+.contact .block__head .block__title {
+  padding-top: 95px;
 }
-.icon-upload-cloud-outline {
+
+.contact__icon-box {
+  display: flex;
+  justify-content: space-between;
+  max-width: 570px;
+  margin: 0 auto;
+  padding-top: 64px;
 }
+
+.contact__item {
+  text-align: center;
+  width: 130px;
+}
+
+.contact__item i {
+  color: #323232;
+  font-size: 21px;
+}
+
+.contact__text {
+  margin-bottom: 12px;
+}
+
+.contact__text a {
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #898888;
+  text-decoration: none;
+  transition: .3s;
+}
+
+.contact__text a:hover {
+  color: #4b4b4b;
+  text-decoration: underline;
+}
+
+.contact__form {
+  padding-top: 153px;
+  display: flex;
+  flex-direction: column;
+  max-width: 770px;
+  margin: 0 auto;
+}
+
+.contact__form input {
+  height: 52px;
+  padding: 20px;
+  text-align: center;
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #898888;
+  border: 1px solid #999;
+}
+
+.contact__name {
+  margin-bottom: 20px;
+}
+
+.contact__email {
+  margin-bottom: 20px;
+}
+
+.contact__number {
+  margin-bottom: 18px;
+}
+
+.contact__textarea {
+  margin-bottom: 21px;
+  height: 195px;
+  resize: none;
+  padding: 22px;
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 15px;
+  line-height: 26px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #898888;
+  border: 1px solid #999;
+}
+
+.contact__form .contact__button {
+  cursor: pointer;
+  background-color: #161616;
+  font-family: "HelveticaNeueLTProMd", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #fefefe;
+  border: none;
+  outline: none;
+  padding: 0;
+}
+
+.footer {
+  padding-top: 154px;
+}
+
+.footer__text {
+  text-align: center;
+  font-family: "HelveticaNeueLTProLt", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  color: #3b3b3b;
+  margin-bottom: 29px;
+}
+
 
 
 /* 
