--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ body {
   align-items: center;
 }
 
+.menu__mobile {
+  display: none;
+}
+
 .menu__item a {
   font-family: "Roboto-Regular", sans-serif;
   font-size: 13px;
@@ -97,7 +101,8 @@ body {
   font-weight: 400;
   letter-spacing: 0.02em;
   color: #1d1e1f;
-  margin: 207px auto 4px;
+  padding-top: 207px;
+  margin: 0 auto 4px;
 }
 
 .header__text {
@@ -133,8 +138,8 @@ body {
   height: 1129px;
   padding-top: 128px;
   padding-bottom: 271px;
-  background: url(../img/buildings__black_3164.png) center 101% repeat-x, url(../img/buildings__white_3165.png) center 101% repeat-x, #1d1d1d;
-  /* background-size: contain, contain; */
+  background: url(../img/buildings__black_3164.png) center 100% repeat-x, url(../img/buildings__white_3165.png) center 100% repeat-x, #1d1d1d;
+  background-size: contain, contain;
 }
 
 .about__inner {
@@ -419,7 +424,134 @@ body {
   margin-bottom: 29px;
 }
 
+@media screen and (max-width: 769px) {
+  .container {
+    width: 768px;
+  }
 
+  .about {
+    height: auto;
+    padding-bottom: 200px;
+  }
+
+  .about__inner {
+    gap: 30px;
+    grid-template-columns: max-content;
+  }
+
+  .team .block__title,
+  .provide .block__title {
+    padding-top: 100px;
+  }
+
+  .provide {
+    padding-bottom: 100px;
+  }
+
+  .provide__inner {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 80px;
+
+  }
+
+  .provide__item {
+    max-width: 300px;
+    margin: 0 30px 40px;
+  }
+
+  .contact__form {
+    padding-top: 100px;
+  }
+
+  .footer {
+    padding-top: 30px;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .container {
+    width: 375px;
+  }
+
+  .menu__desktop {
+    display: none;
+  }
+
+  .menu__mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    margin: 0 -15px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .menu__burger {
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    position: relative;
+  }
+
+  .menu__burger::after {
+    content: '';
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    position: absolute;
+    bottom: -10px;
+  }
+
+  .menu__burger::before {
+    content: '';
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    position: absolute;
+    top: -10px;
+  }
+
+  .header__title {
+    padding-top: 100px;
+    margin-bottom: 30px;
+  }
+
+  .header__button {
+    margin-bottom: 100px;
+  }
+
+  .about__item {
+    max-width: 340px;
+  }
+
+  .team {
+    padding-bottom: 80px;
+    height: auto;
+  }
+
+  .team__inner {
+    flex-wrap: wrap;
+    padding-top: 100px;
+  }
+
+  .team__item {
+    width: 340px;
+  }
+
+  .provide__inner {
+    padding-top: 100px;
+  }
+
+  .contact__form {
+    flex-wrap: wrap;
+  }
+}
 
 /* 
 font-family: "HelveticaNeueLTProLt", sans-serif;
